# matter

./: .gitmodules
examples/all-clusters-app/linux/: AppOptions.cpp
examples/all-clusters-app/nxp/common/main/: AppAssert.cpp  AppMatterButtonEmpty.cpp  AppMatterCli.cpp  AppTask.cpp  CHIPDeviceManager.cpp  ClusterManager.cpp  DeviceCallbacks.cpp  MatterCli.cpp  ZclCallbacks.cpp  main.cpp
examples/all-clusters-app/nxp/mw320/: BUILD.gn  main.cpp
examples/all-clusters-app/nxp/mw320/include/: CHIPProjectConfig.h
examples/all-clusters-app/nxp/rt/rt1060/: .gn  BUILD.gn  README.md  README_Ethernet.md  README_Openthread.md  README_Wifi.md
examples/all-clusters-app/nxp/rt/rt1060/otw_uploader/include/: ISPInterface.h  ot-rcp-fw-placeholder.bin.h
examples/all-clusters-app/nxp/rt/rt1060/otw_uploader/source/: ISPInterface.cpp
examples/all-clusters-app/nxp/rt/rt1060/src/: AppMatterButton.cpp
examples/chef/: chef.py
examples/chef/devices/: rootnode_doorlock_aNKYAreMXE.matter  rootnode_extendedcolorlight_8lcaaYJVAa.matter
examples/chip-tool/commands/common/: CHIPCommand.h
examples/chip-tool/config/: PersistentStorage.cpp
examples/common/pigweed/rpc_services/: Device.h
examples/contact-sensor-app/contact-sensor-common/: contact-sensor-app.matter  contact-sensor-app.zap
examples/light-switch-combo-app/light-switch-combo-common/: light-switch-combo-app.zap
examples/light-switch-combo-app/nxp/mw320/: BUILD.gn
examples/light-switch-combo-app/nxp/mw320/include/: CHIPProjectConfig.h
examples/light-switch-combo-app/nxp/mw320/main/: main.cpp
examples/lighting-app/nxp/mw320/: BUILD.gn
examples/lighting-app/nxp/zap/: lighting-on-off.matter  lighting-on-off.zap
examples/lock-app/nxp/zap/: lock-app.matter  lock-app.zap
examples/nxp-thermostat/linux/: BUILD.gn  args.gni
examples/nxp-thermostat/linux/include/: CHIPProjectConfig.h
examples/nxp-thermostat/nxp-thermostat-common/: BUILD.gn  nxp-thermostat.matter  nxp-thermostat.zap
examples/ota-requestor-app/esp32/: CMakeLists.txt
examples/ota-requestor-app/esp32/main/: CMakeLists.txt  main.cpp
examples/platform/linux/: AppMain.cpp  BUILD.gn  DeviceAttestationCreds.cpp  DeviceAttestationCreds.h  Options.cpp
examples/platform/nxp/doc/: manufacturing_flow.md
examples/platform/nxp/se05x/: DeviceAttestationSe05xCredsExample_v2.cpp  LinuxCommissionableDataProviderSE05xTP.cpp
examples/thermostat/nxp/linux-se05x/: README.md
integrations/cloudbuild/: build-all.yaml  chef.yaml  smoke-test.yaml
integrations/docker/images/chip-build-k32w/: Dockerfile
scripts/: constraints.txt
scripts/examples/: imxlinux_example.sh
scripts/tools/nxp/: generate_nxp_chip_factory_bin.py
scripts/tools/nxp/factory_data_generator/: generate.py
src/app/clusters/level-control/: level-control.cpp
src/crypto/: BUILD.gn  CHIPCryptoPAL.cpp  CHIPCryptoPAL.h  CHIPCryptoPALOpenSSL.cpp  CHIPCryptoPALTinyCrypt.cpp  CHIPCryptoPALmbedTLS.cpp  crypto.gni
src/crypto/hsm/: CHIPCryptoPALHsm.h  CHIPCryptoPALHsm_config.h
src/crypto/hsm/nxp/: CHIPCryptoPALHsm_SE05X_HKDF.cpp  CHIPCryptoPALHsm_SE05X_P256.cpp  CHIPCryptoPALHsm_SE05X_Spake2p.cpp  CHIPCryptoPALHsm_SE05X_utils.h  CHIPCryptoPALHsm_SE05x_config.h  PersistentStorageOperationalKeystoreHSM.cpp  PersistentStorageOperationalKeystoreHSM.h  README.md  RandUtils_SE05x.cpp
src/crypto/tests/: BUILD.gn
src/lwip/: BUILD.gn
src/platform/: BUILD.gn  device.gni
src/platform/FreeRTOS/: GenericThreadStackManagerImpl_FreeRTOS.cpp
src/platform/nxp/common/: CHIPDeviceNXPPlatformDefaultConfig.h  CHIPDevicePlatformEvent.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DeviceNetworkProvisioningDelegateImpl.cpp  DeviceNetworkProvisioningDelegateImpl.h  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  DnssdImpl.cpp  InetNXPPlatformDefaultConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  NXPConfig.cpp  NXPConfig.h  NetworkCommissioningDriver.h  NetworkCommissioningWiFiDriver.cpp  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PlatformManagerImpl.h  SystemNXPPlatformDefaultConfig.h  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h  WarmNXPPlatformDefaultConfig.h  ram_storage.c
src/platform/nxp/mw320/: CHIPDevicePlatformConfig.h  PlatformManagerImpl.cpp
src/platform/nxp/rt/rt1060/: BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPPlatformConfig.h  DataReaderEncryptedDCP.cpp  DataReaderEncryptedDCP.h  FactoryDataProvider.cpp  FactoryDataProvider.h  InetPlatformConfig.h  PlatformManagerImpl.cpp  SystemPlatformConfig.h  WarmPlatformConfig.h  args.gni
src/protocols/secure_channel/: CASESession.cpp
src/test_driver/nxp/rt/rt1060/: .gn  BUILD.gn  README.md  build_overrides
src/transport/: CryptoContext.cpp
zzz_generated/chef-rootnode_doorlock_aNKYAreMXE/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
zzz_generated/chef-rootnode_extendedcolorlight_8lcaaYJVAa/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  endpoint_config.h  gen_config.h
zzz_generated/contact-sensor-app/zap-generated/: Clusters.matter  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
zzz_generated/light-switch-combo-app/zap-generated/: CHIPClientCallbacks.h  CHIPClusters.h  Clusters.matter  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  callback-stub.cpp  endpoint_config.h  gen_config.h
zzz_generated/lighting-app/nxp/zap-generated/: Clusters.matter  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
zzz_generated/lock-app/nxp/zap-generated/: PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
zzz_generated/nxp-thermostat/zap-generated/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
(+103 files in other folders)
