# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/nxp_sdk.gni")

rt_platform = "rt1060"
nxp_platform = "rt/${rt_platform}"
nxp_sdk_name = "rt_sdk"
rt_sdk_root = "${chip_root}/third_party/nxp/rt_sdk/repo"
chip_device_platform = "nxp"
lwip_platform = "nxp"

arm_arch = "armv7e-m"
arm_abi = "aapcs"
arm_cpu = "cortex-m7"
arm_fpu = "fpv5-d16"

arm_float_abi = "hard"

chip_device_project_config_include = "<CHIPProjectConfig.h>"
chip_project_config_include = "<CHIPProjectConfig.h>"
chip_inet_project_config_include = "<CHIPProjectConfig.h>"
chip_system_project_config_include = "<CHIPProjectConfig.h>"
chip_ble_project_config_include = "<CHIPProjectBleConfig.h>"
chip_project_config_include_dirs = ["${chip_root}/examples/platform/${nxp_platform}/app/project_include"]

chip_mdns = "platform"
chip_build_tests = false

declare_args() {
    chip_enable_ethernet = false
    iw416_transceiver = false
    k32w0_transceiver = false
    w8801_transceiver = false
}

mbedtls_target = "${nxp_sdk_build_root}:nxp_mbedtls"

openthread_external_mbedtls = mbedtls_target
openthread_external_platform = "${nxp_sdk_build_root}:nxp_sdk"
openthread_project_core_config_file = "OpenThreadConfig.h"
openthread_core_config_deps = [ "${chip_root}/third_party/openthread/platforms/nxp/${nxp_platform}:openthread_core_config_rt1060" ]
openthread_core_config_platform_check_file = "openthread-core-rt1060-config-check.h"
openthread_external_platform = "${chip_root}/third_party/openthread/platforms/nxp/${nxp_platform}:libopenthread-rt1060"
